Fix postinstall script
Signed-off-by: Sebastian Malton <sebastian@malton.name>

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "compile:node-fetch": "yarn run webpack --config webpack/node-fetch.ts",
     "prepare": "yarn run compile:node-fetch",
     "npm:fix-extensions-package-version": "yarn run ts-node build/set_extensions_npm_version.ts",
+    "npm:fix-package-version": "yarn run ts-node build/set_npm_version.ts",
     "build:linux": "yarn run compile && electron-builder --linux --dir",
     "build:mac": "yarn run compile && electron-builder --mac --dir",
     "build:win": "yarn run compile && electron-builder --win --dir",
@@ -78,7 +79,7 @@
     "build:theme-vars": "yarn run ts-node build/build_theme_vars.ts",
     "lint": "PROD=true yarn run eslint --ext js,ts,tsx --max-warnings=0 .",
     "lint:fix": "yarn run lint --fix",
-    "postinstall": "yarn run fix-canvas-deps",
+    "postinstall": "yarn run fix-canvas-deps && yarn run compile:node-fetch",
     "mkdocs-serve-local": "docker build -t mkdocs-serve-local:latest mkdocs/ && docker run --rm -it -p 8000:8000 -v ${PWD}:/docs mkdocs-serve-local:latest",
     "verify-docs": "docker build -t mkdocs-serve-local:latest mkdocs/ && docker run --rm -v ${PWD}:/docs mkdocs-serve-local:latest build --strict",
     "typedocs-extensions-api": "yarn run typedoc src/extensions/extension-api.ts",
