Generate tray icons before installing canvas
Signed-off-by: Sebastian Malton <sebastian@malton.name>

--- a/package.json
+++ b/package.json
@@ -75,11 +75,12 @@
     "dist": "yarn run compile && electron-builder --publish onTag",
     "dist:dir": "yarn run dist --dir -c.compression=store -c.mac.identity=null",
     "download:binaries": "yarn run ts-node build/download_binaries.ts",
-    "build:tray-icons": "yarn run ts-node build/generate-tray-icons.ts",
+    "pregenerate-tray-icons": "npx swc ./scripts/generate-tray-icons.ts -o ./scripts/generate-tray-icons.mjs",
+    "generate-tray-icons": "node ./scripts/generate-tray-icons.mjs",
     "build:theme-vars": "yarn run ts-node build/build_theme_vars.ts",
     "lint": "PROD=true yarn run eslint --ext js,ts,tsx --max-warnings=0 .",
     "lint:fix": "yarn run lint --fix",
-    "postinstall": "yarn run fix-canvas-deps && yarn run compile:node-fetch",
+    "postinstall": "yarn run generate-tray-icons && yarn run fix-canvas-deps && yarn run compile:node-fetch",
     "mkdocs-serve-local": "docker build -t mkdocs-serve-local:latest mkdocs/ && docker run --rm -it -p 8000:8000 -v ${PWD}:/docs mkdocs-serve-local:latest",
     "verify-docs": "docker build -t mkdocs-serve-local:latest mkdocs/ && docker run --rm -v ${PWD}:/docs mkdocs-serve-local:latest build --strict",
     "typedocs-extensions-api": "yarn run typedoc src/extensions/extension-api.ts",
