Fix build:tray-icons on windows bash
Signed-off-by: Sebastian Malton <sebastian@malton.name>

--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "dist": "npm run compile && electron-builder --publish onTag",
     "dist:dir": "npm run dist -- --dir -c.compression=store -c.mac.identity=null",
     "download:binaries": "ts-node build/download_binaries.ts",
-    "build:tray-icons": "ts-node build/generate-tray-icons.ts",
+    "prebuild:tray-icons": "swc ./scripts/generate-tray-icons.ts -o ./scripts/generate-tray-icons.mjs",
+    "build:tray-icons": "node ./scripts/generate-tray-icons.mjs",
     "build:theme-vars": "ts-node build/build_theme_vars.ts",
     "lint": "PROD=true eslint --ext js,ts,tsx --max-warnings=0 .",
     "lint:fix": "npm run lint -- --fix",
