--- a/package.json
+++ b/package.json
@@ -244,6 +244,7 @@
     "@sentry/electron": "^3.0.8",
     "@sentry/integrations": "^6.19.3",
     "@side/jest-runtime": "^1.0.1",
+    "@swc/core-linux-x64-gnu": "^1.3.24",
     "abort-controller": "^3.0.0",
     "auto-bind": "^4.0.0",
     "await-lock": "^2.2.2",
