--- a/package.json
+++ b/package.json
@@ -244,7 +244,6 @@
     "@sentry/electron": "^3.0.8",
     "@sentry/integrations": "^6.19.3",
     "@side/jest-runtime": "^1.0.1",
-    "@swc/core-linux-x64-gnu": "^1.3.24",
     "abort-controller": "^3.0.0",
     "auto-bind": "^4.0.0",
     "await-lock": "^2.2.2",
@@ -472,5 +471,10 @@
     "react-select": "^5.7.0",
     "typed-emitter": "^1.4.0",
     "xterm-addon-fit": "^0.5.0"
+  },
+  "optionalDependencies": {
+    "@swc/core-darwin-x64": "^1.3.24",
+    "@swc/core-linux-x64-gnu": "^1.3.24",
+    "@swc/core-win32-x64-msvc": "^1.3.24"
   }
 }
