Change to a different dep for windows
Signed-off-by: Sebastian Malton <sebastian@malton.name>

--- a/package.json
+++ b/package.json
@@ -475,6 +475,6 @@
   "optionalDependencies": {
     "@swc/core-darwin-x64": "^1.3.24",
     "@swc/core-linux-x64-gnu": "^1.3.24",
-    "@swc/core-win32-x64-msvc": "^1.3.24"
+    "@swc/core-win32": "^1.2.42"
   }
 }
