scss files, and updates after rebase on master
Signed-off-by: Jim Ehrismann <jehrismann@mirantis.com>

--- a/templates/create-resource/ClusterRole.yaml
+++ b/templates/create-resource/ClusterRole.yaml
@@ -83,6 +83,13 @@ rules:
     resources:
       - horizontalpodautoscalers
       - horizontalpodautoscalers/status
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - autoscaling.k8s.io
+    resources:
       - verticalpodautoscalers
       - verticalpodautoscalers/status
     verbs:
